stack/cluster-infra/grafana/grafana-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  # namespace: traefik
spec:
  entryPoints:
    - websecure
    # - web
  routes:
    - match: Host(`grafana.localhost`)
      kind: Rule
      middlewares:
        - name: headers-default
      services:
        - name: kube-prometheus-grafana
          namespace: default
          port: 80
